--- a/TicTacToe/css/style.css
+++ b/TicTacToe/css/style.css
@@ -105,7 +105,7 @@
 
 .board {
 	width: 100%;
-	height: 50vh;
+	height: 400px;
 
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
@@ -177,7 +177,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 12vh;
+	font-size: 13vh;
 	color: var(--RED);
 }
 
