--- a/TicTacToe/css/style.css
+++ b/TicTacToe/css/style.css
@@ -20,12 +20,14 @@
 	--HEIGHT-BLOCK: 60%;
 
 	/* COLORS */
+	--BLACK: rgb(0, 0, 0);
 	--MAIN-BGCOLOR: rgb(14, 19, 22);
+	--WINNER-BGCOLOR: rgba(75, 96, 109);
 	--LIGHT-MAIN-BGCOLOR: rgba(75, 96, 109, 0.5);
 	--GREEN: rgb(26, 217, 12);
 	--GRAY: rgb(192, 192, 192);
 	--RED: rgb(192, 39, 39);
-	--WHITE: #fff;
+	--WHITE: rgb(255, 255, 255);
 
 	/* MARGINS, PADDINGS AND BORDERS */
 	--MAIN-MARGIN: 2rem;
@@ -54,10 +56,11 @@
 
 /* CHOOSE YOUR FIGHTER */
 .choose-sign {
-	width: 50%;
+	width: clamp(400px, 50vw, 600px);
 	height: 250px;
 	background-color: var(--LIGHT-MAIN-BGCOLOR);
 	border-radius: var(--FIELD-BORDER-RAD);
+	font-size: 1.5em;
 
 	display: flex;
 	justify-content: center;
@@ -67,13 +70,13 @@
 }
 
 .choose-sign p {
-	color: var(--GRAY);
+	color: var(--WHITE);
 }
 
 .choose-sign-inside {
 	width: 80%;
 	height: 50%;
-	background-color: black;
+	background-color: var(--BLACK);
 	border-radius: var(--FIELD-BORDER-RAD);
 
 	display: flex;
@@ -87,6 +90,7 @@
 	height: 80%;
 	background-color: var(--WHITE);
 	border-radius: var(--FIELD-BORDER-RAD);
+	cursor: pointer;
 
 	display: flex;
 	justify-content: center;
@@ -96,7 +100,7 @@
 .choose-x p,
 .choose-o p {
 	font-size: calc(var(--FSIZE) * 5);
-	color: var(--MAIN-BGCOLOR);
+	color: var(--BLACK);
 }
 
 .choose-o {
@@ -107,7 +111,7 @@
 }
 
 .new-game {
-	width: 50%;
+	width: clamp(400px, 50vw, 600px);
 	height: var(--FOOTER-HEIGHT);
 	font-size: calc(var(--FSIZE) * 1.5);
 	background-color: var(--RED);
@@ -148,18 +152,6 @@
 
 .sign {
 	font-size: 1.6em;
-}
-
-.reset-points {
-	width: calc(var(--WIDTH-BLOCK));
-	height: var(--HEIGHT-BLOCK);
-	background-color: var(--GRAY);
-	border-radius: var(--FIELD-BORDER-RAD);
-	cursor: pointer;
-
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
 
 .reset-button {
@@ -241,7 +233,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 12vh;
+	font-size: 5em;
 	color: var(--GREEN);
 }
 
@@ -249,19 +241,48 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 13vh;
+	font-size: 5em;
 	color: var(--RED);
 }
 
 .winner-window {
-	width: 100%;
-	height: var(--WW-HEIGHT);
-	background-color: var(--LIGHT-MAIN-BGCOLOR);
+	width: 100vw;
+	height: 20vh;
+	background-color: var(--WINNER-BGCOLOR);
 	color: var(--GRAY);
-	border-radius: var(--FIELD-BORDER-RAD);
-	font-size: 2em;
+	font-size: 1.5em;
+
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	gap: var(--FIELD-GAP);
+}
+
+.winner-window div {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: row;
+	gap: var(--FIELD-GAP);
+}
+
+.quit-button,
+.next-round-button {
+	width: calc(var(--WW-WIDTH) / 3);
+	height: calc(var(--WW-HEIGHT) / 3);
+	background-color: var(--GRAY);
+	border-radius: calc(var(--FIELD-BORDER-RAD) / 2);
+	color: var(--BLACK);
+	cursor: pointer;
 
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+.next-round-button {
+	width: calc(var(--WW-WIDTH) / 1.5);
+	background-color: var(--RED);
 }
